# python-scratch-pad

./: README.md  pyproject.toml
src/scratch_pad/: __init__.py  fibonacci.py
